# radar-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  publish-pypi.yml
docs/: conf.py  index.rst
docs/examples/: 3-array-definition.ipynb
docs/videos/: 2-vary-element-pattern.py  3-vary-frequency-array-factor.py
examples/: 2-geometry-definition.ipynb  4-array-amplitude-phase-weights.ipynb
radar/: __init__.py
radar/components/: __init__.py  array.py  element.py  geometry.py  response.py
radar/utils/: __init__.py
radar/utils/animate/: __init__.py  beam.py  geometry.py
radar/utils/calculate/: convert.py  pattern.py
radar/utils/plotter/: beam.py  geometry.py
radar/utils/typing/: __init__.py  constants.py  enums.py  errors.py  units.py  validator.py
videos/: 1-vary-array-geometry.py  4-vary-steering-angle.py
